--- a/src/taskpane/taskpane.css
+++ b/src/taskpane/taskpane.css
@@ -79,22 +79,20 @@ b {
     font-weight: bold;
 }
 
-/* May need edits
-/* The container must be positioned relative: */
 .custom-select {
     position: relative;
     font-family: Arial;
   }
   
   .custom-select select {
-    display: none; /*hide original SELECT element: */
+    display: none; /*hide original SELECT element:*/
   }
   
   .select-selected {
     background-color: DodgerBlue;
   }
   
-  /* Style the arrow inside the select element: */
+  /*style the arrow inside the select element:*/
   .select-selected:after {
     position: absolute;
     content: "";
@@ -106,22 +104,23 @@ b {
     border-color: #fff transparent transparent transparent;
   }
   
-  /* Point the arrow upwards when the select box is open (active): */
+  /*point the arrow upwards when the select box is open (active):*/
   .select-selected.select-arrow-active:after {
     border-color: transparent transparent #fff transparent;
     top: 7px;
   }
   
-  /* style the items (options), including the selected item: */
+  /*style the items (options), including the selected item:*/
   .select-items div,.select-selected {
     color: #ffffff;
     padding: 8px 16px;
     border: 1px solid transparent;
     border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
     cursor: pointer;
+    user-select: none;
   }
   
-  /* Style items (options): */
+  /*style items (options):*/
   .select-items {
     position: absolute;
     background-color: DodgerBlue;
@@ -131,7 +130,7 @@ b {
     z-index: 99;
   }
   
-  /* Hide the items when the select box is closed: */
+  /*hide the items when the select box is closed:*/
   .select-hide {
     display: none;
   }
