--- a/src/taskpane/taskpane.css
+++ b/src/taskpane/taskpane.css
@@ -9,6 +9,8 @@
      height: 100%;
      margin: 0;
      padding: 0;
+     font-family: Arial, Helvetica, sans-serif;
+     background-color: #fff2df;
  }
  
  ul {
@@ -25,8 +27,10 @@
     -webkit-flex-direction: column;
     flex-direction: column;
     align-items: center;
+    color: #674d3c;
  }
 
+ /* Let's Start Giving Feedback*/
  .ms-welcome__main {
     display: -webkit-flex;
     display: flex;
@@ -39,6 +43,8 @@
     -webkit-flex: 1 0 0;
     flex: 1 0 0;
     padding: 10px 20px;
+    color: #674d3c;
+    text-align: center;
  }
  
  .ms-welcome__main > h2 {
@@ -46,13 +52,14 @@
      text-align: center;
  }
  
+ /*Read the essays and turn on grammar check to spot errors,*/
  .ms-welcome__features {
      list-style-type: none;
-     margin-top: 20px;
+     margin-top: 0px;
  }
  
  .ms-welcome__features.ms-List .ms-ListItem {
-     padding-bottom: 20px;
+     padding-bottom: 0px;
      display: -webkit-flex;
      display: flex;
  }
@@ -62,16 +69,17 @@
  }
  
  .ms-welcome__action.ms-Button--hero {
-     margin-top: 30px;
+     margin-top: 10px;
+     margin-bottom: 10px;
  }
  
 .ms-Button.ms-Button--hero .ms-Button-label {
-  color: #0078d7;
+  color: #588c7e;
 }
 
 .ms-Button.ms-Button--hero:hover .ms-Button-label,
 .ms-Button.ms-Button--hero:focus .ms-Button-label{
-  color: #005a9e;
+  color: #83339e;
   cursor: pointer;
 }
 
@@ -79,9 +87,12 @@ b {
     font-weight: bold;
 }
 
+
 .custom-select {
     position: relative;
-    font-family: Arial;
+    color: #588c7e;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
   
   .custom-select select {
@@ -89,14 +100,14 @@ b {
   }
   
   .select-selected {
-    background-color: DodgerBlue;
+    background-color: purple;
   }
   
   /*style the arrow inside the select element:*/
   .select-selected:after {
     position: absolute;
     content: "";
-    top: 14px;
+    top: 10px;
     right: 10px;
     width: 0;
     height: 0;
@@ -112,22 +123,24 @@ b {
   
   /*style the items (options), including the selected item:*/
   .select-items div,.select-selected {
-    color: #ffffff;
+    color: #fff2df;
     padding: 8px 16px;
     border: 1px solid transparent;
-    border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+    border-color: transparent transparent rgba(46, 38, 38, 0.1) transparent;
     cursor: pointer;
     user-select: none;
+    font-size: 15px;
   }
   
   /*style items (options):*/
   .select-items {
     position: absolute;
-    background-color: DodgerBlue;
+    background-color: rgb(121, 177, 234);
     top: 100%;
     left: 0;
     right: 0;
     z-index: 99;
+    font-size: 15px;
   }
   
   /*hide the items when the select box is closed:*/
@@ -138,3 +151,18 @@ b {
   .select-items div:hover, .same-as-selected {
     background-color: rgba(0, 0, 0, 0.1);
   }
+
+  .textbox {
+    height: 15px;
+    width: 250px;
+    margin-bottom: 5px;
+    font-size: 12px;
+    overflow: hidden;
+    }
+
+.dropdown {
+    height: 30px;
+    width: 250px;
+    margin-bottom: 5px;
+    font-size: 12px;
+    }
